# ALMACENEFCEN

./: .gitignore  pyproject.toml
backend-auth-user/: .env
backend-auth-user/app/: main.py
backend-auth-user/app/core/: __init__.py
backend-auth-user/docker/: docker.compose.dev.yml
backend/app/core/: config.py
backend/app/infraestructure/db/crud/: school.py
backend/app/infraestructure/db/init_data/: school.py
backend/app/infraestructure/db/models/: __init__.py  classroom.py  department.py  schedule.py  school.py  user.py
backend/app/protocols/db/crud/: school.py
backend/app/protocols/db/models/: school.py
backend/app/schemas/: __init__.py  deparment.py
client/: package-lock.json
client/src/: index.html
client/src/app/: app-routing.module.ts  app.component.html  app.module.ts
client/src/app/modules/programing-room/: programing-routing.module.ts  programing.module.ts
client/src/app/modules/programing-room/pages/create/: create-routing.module.ts  create.module.ts
client/src/app/modules/programing-room/pages/programing-list/: programing-list.component.html  programing-list.component.spec.ts  programing-list.component.ts
client/src/app/shared/: shared.module.ts
config_db/: .env  create.sql
config_db/docker/: docker-compose.dev.yml
docker/: docker.compose.dev.yml
